--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/logo_style.css" />
     <link rel="stylesheet" href="./css/scroller-style.css" />
     <link rel="stylesheet" href="./css/codepilot_logo_style.css" />
-    <title>Carpenter Menu Hover</title>
+    <title>ÁCS KECSKEMÉT | Gálik Sándor ev.</title>
   </head>
   <body>
     <header>
